<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_charging"
        android:icon="@drawable/ic_charging"
        android:title="@string/nav_title_charging" />
    <item
        android:id="@+id/nav_battery_usage"
        android:icon="@drawable/ic_estimation"
        android:title="@string/nav_title_battery_usage" />
    <item
        android:id="@+id/nav_health"
        android:icon="@drawable/ic_statistics"
        android:title="@string/nav_title_health" />
    <item
        android:id="@+id/nav_system_info"
        android:icon="@drawable/ic_discovery"
        android:title="@string/nav_title_system_info" />
    <item
        android:id="@+id/nav_image_compression"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/nav_title_image_compression" />
</menu>